# aws-tmp-cred-gen

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
src/: error.rs  lib.rs  main.rs  server.rs
